CLV-281: revert fix for menu whitespace to restore chevron alignment. (#3073)
business avatar uses height+line-height to center the avatar initials, this causes the navbar height to increase. applying the same height+line-height to the primary menu items to match offsets the vertical alignment of the chevrons to their text.

It is best to change the business avatar so vertical positioning of initials isn't coupled to the size of it's parent

--- a/src/navigation/components/NavigationBar.module.css
+++ b/src/navigation/components/NavigationBar.module.css
@@ -11,10 +11,6 @@
   z-index: 1010;
 }
 
-.navigation {
-  line-height: 2.4rem;
-}
-
 @media (min-width: 768px){
   .add,
   .help {
